infrastructure/ms-teacher/01-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-teacher
  labels:
    app: ms-teacher
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ms-teacher
  template:
    metadata:
      labels:
        app: ms-teacher
    spec:
      containers:
        - name: ms-teacher
          image: aymenboujmil/ms-teachers
          ports:
            - containerPort: 5050
      restartPolicy: Always
