infrastructure/ms-teacher/04-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: teacher-ingress
  labels:
    name: teacher-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: ms-teacher-service
                port:
                  number: 80
